docker-compose/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: collaboration-server
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: collaboration-server
                            hash_policy:
                              - header:
                                  header_name: "x-unit-id"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: collaboration-server
      http2_protocol_options:
        max_concurrent_streams: 20000
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: RING_HASH
      load_assignment:
        cluster_name: collaboration-server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: collaboration-server
                      port_value: 5002

overload_manager:
  resource_monitors:
    - name: "envoy.resource_monitors.global_downstream_max_connections"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 50000
